index whithout footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header__left">
         <a href="index.html"><img src="images/logo.png" alt="b" class="logo logo_header"></a>
         <a href="index.html" class="brandName__href">
-            <p class="brandName">bran
+            <p class="brandName brandName_header">bran
                 <mark class="mark">d</mark>
             </p>
         </a>
@@ -181,6 +181,7 @@
             <p class="banner__p">for women</p>
         </div>
     </div>
+    <!-- TODO решить проблему с расширением блока при отсутсивии иконок -->
     <div class="benefits">
         <h2 class="benefits__h"><mark class="mark"><i class="fas fa-truck-moving fas__logo"></i></mark>Free Delivery</h2>
         <p class="benefits__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
@@ -199,10 +200,80 @@
 </section>
 <section class="lure">
     <div class="feedback">
-        <img src="images/face.png" alt="Bin" class="feedback__img">
         <!-- TODO 1) правильные теги для цитаты и автора -->
+        <div class="feedback__text-box">
+            <img src="images/face.png" alt="Bin Burhan" class="feedback__img">
+            <q class="feedback__text">Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium</q>
+        </div>
+        <div class="feedback__from">
+            <mark class="mark feedback__name">bin burhan</mark>
+            <p class="feedback__city">Dhaka, Bd</p>
+        </div>
+        <div class="pagination">
+            <a href="#" class="pagination__href"><div class="pagination__block"></div></a>
+            <a href="#" class="pagination__href"><div class="pagination__block pagination__block_activ"></div></a>
+            <a href="#" class="pagination__href"><div class="pagination__block"></div></a>
+        </div>
     </div>
-    <div class="subscribe"></div>
+    <div class="subscribe">
+        <div class="subscribe__text-box">
+            <h3 class="subscribe__h">subscribe</h3>
+            <p class="subscribe__text">for our newletter and promotion</p>
+        </div>
+        <form action="#" class="subscribe__form">
+            <label for="email">
+                <input type="email" id="email" placeholder="enter your email" class="subscribe__email">
+            </label>
+            <a href="#"><div class="subscribe__button">Subscribe</div></a>
+        </form>
+    </div>
+</section>
+<section class="lower center">
+    <div class="description">
+        <a href="index.html"><img src="images/logo.png" alt="b" class="logo logo_header logo_lower"></a>
+        <a href="index.html" class="brandName__href ">
+            <p class="brandName randName_lower">bran
+                <mark class="mark">d</mark>
+            </p>
+        </a>
+        <p class="description__text">Objectively transition extensive data rather than cross functional solutions.
+            Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an
+            expanded array of processes and cross-unit partnerships. </p>
+        <p class="description__text_lower">
+            Efficiently plagiarize 24/365 action items and focused infomediaries.
+            Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+    </div>
+    <nav class="lower__nav">
+        <h4 class="lower__h"><mark class="mark">company</mark></h4>
+        <ul class="lower__ul">
+            <a href="#"><li class="lower__li">home</li></a>
+            <a href="#"><li class="lower__li">shop</li></a>
+            <a href="#"><li class="lower__li">about</li></a>
+            <a href="#"><li class="lower__li">how it works</li></a>
+            <a href="#"><li class="lower__li">contact</li></a>
+        </ul>
+    </nav>
+    <nav class="lower__nav">
+        <h4 class="lower__h"><mark class="mark">information</mark></h4>
+        <ul class="lower__ul">
+            <a href="#"><li class="lower__li">tearms & conditior</li></a>
+            <a href="#"><li class="lower__li">privacy policy</li></a>
+            <a href="#"><li class="lower__li">how to buy</li></a>
+            <a href="#"><li class="lower__li">how to sell</li></a>
+            <a href="#"><li class="lower__li">promotion</li></a>
+        </ul>
+    </nav>
+    <nav class="lower__nav">
+        <h4 class="lower__h"><mark class="mark">shop category</mark></h4>
+        <ul class="lower__ul">
+            <a href="#"><li class="lower__li">men</li></a>
+            <a href="#"><li class="lower__li">women</li></a>
+            <a href="#"><li class="lower__li">child</li></a>
+            <a href="#"><li class="lower__li">apparel</li></a>
+            <a href="#"><li class="lower__li">brows all</li></a>
+        </ul>
+    </nav>
 </section>
 </body>
 </html>
